--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,13 @@
     <com.example.myview.MyView
         android:layout_width="match_parent"
         android:layout_height="170dp"
-        android:id="@+id/my_view"/>
+        android:id="@+id/my_view"
+        android:background="#E7E3E3"
+        android:layout_marginTop="10dp"/>
 
     <com.example.myview.ProgressView
         android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_height="330dp"
         android:id="@+id/progress_view"
         />
 
