优化总费用显示问题

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="#ffffff">
 
-    <com.example.myview.MyView
+    <com.example.myview.ChartView
         android:layout_width="match_parent"
         android:layout_height="170dp"
         android:id="@+id/my_view"
